--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,8 @@ dist.jar=${dist.dir}/rc_task_management.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.gson-2.3.1-javadoc.jar=lib/gson-2.3.1-javadoc.jar
+file.reference.gson-2.3.1-sources.jar=lib/gson-2.3.1-sources.jar
 file.reference.gson-2.3.1.jar=lib/gson-2.3.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -37,7 +39,9 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.gson-2.3.1.jar}
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.gson-2.3.1-javadoc.jar}:\
+    ${file.reference.gson-2.3.1-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
