Added some DB seeding

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.gson-2.3.1.jar}:\
     ${file.reference.gson-2.3.1-javadoc.jar}:\
-    ${file.reference.gson-2.3.1-sources.jar}
+    ${file.reference.gson-2.3.1-sources.jar}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
