--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -2,6 +2,11 @@ libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=2.0
+libs.JAVADB_DRIVER_LABEL.classpath=\
+    ${base}/JAVADB_DRIVER_LABEL/derby.jar:\
+    ${base}/JAVADB_DRIVER_LABEL/derbyclient.jar:\
+    ${base}/JAVADB_DRIVER_LABEL/derbynet.jar
+libs.JAVADB_DRIVER_LABEL.displayName=Java DB Driver
 libs.junit.classpath=\
     ${base}/junit/junit-3.8.2.jar
 libs.junit.displayName=JUnit 3.8.2
